force-app/main/default/objects/CommercientSF__ArMultAddress__c/CommercientSF__ArMultAddress__c.object-meta.xml
<CustomObject>
    <description>Syspro ArMultAddress object</description>
    <label>Syspro Multi Ship Address</label>
    <nameField>
        <label>Syspro Multi Ship Address</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro Multi Ship Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>