force-app/main/default/objects/CommercientSF__ArMultAddress__c/fields/CommercientSF__AddrCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AddrCode__c</fullName>
    <label>Ship to address code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>