force-app/main/default/objects/CommercientSF__ArMultAddress__c/fields/CommercientSF__GeographicArea__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GeographicArea__c</fullName>
    <label>Geographic Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>