force-app/main/default/objects/CommercientSF__ArMultAddress__c/fields/CommercientSF__Nationality__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Nationality__c</fullName>
    <label>Nationality code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>