force-app/main/default/objects/CommercientSF__ArMultAddress__c/fields/CommercientSF__ShipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ShipPostalCode__c</fullName>
    <label>Postal/zip code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>