force-app/main/default/objects/CommercientSF__ArMultAddress__c/fields/CommercientSF__State__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>