force-app/main/default/objects/CommercientSF__ArMultAddress__c/fields/CommercientSF__TaxRegnNum__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxRegnNum__c</fullName>
    <label>Tax registration number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>