force-app/main/default/objects/CommercientSF__ArMultAddress__c/fields/shiptoname__c.field-meta.xml
<CustomField>
    <fullName>shiptoname__c</fullName>
    <label>ShipToName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>